[tool.poetry]
name = "device-scan"
version = "0.1.0.dev0"
description = "Python lib for find devices in own network subnet"
readme="README.md"

license = "GPL-3.0-or-later"
authors = ["Jens Diemer <device-scan@jensdiemer.de>"]
homepage = "https://github.com/jedie/device-scan/"
keywords=["creole", "markup", "creole2html", "html2creole", "rest2html", "html2rest", "html2textile"]
classifiers = [
    # http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
poetry-publish = "^0.2.2"
tox = "^3.14.3"
pytest = "^4.6"
pytest-cov = "^2.8.1"
isort = "^4.3.21"
flake8 = "^3.7.9"
flynt = "^0.40.1"
autopep8 = "^1.4.4"

[tool.poetry.scripts]
publish = "device_scan.publish:publish"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

